# carbon-lang_compiler

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
carbon-lang_compiler/: Cargo.toml
carbon-lang_compiler/src/: lib.rs
carbon-lang_compiler/src/lexer/: tokenize.rs
carbon-lang_compiler/src/parser/: decorator.rs  mod.rs  pipeline.rs  tree_builder.rs  utils.rs
carbon-lang_compiler/src/shared/: mod.rs  token.rs
carbon-lang_compiler/src/tests/: mod.rs  preprocess_test.rs  sample.cbs
carbon-lang_dock/: Cargo.toml
carbon-lang_dock/src/: command_executor.rs  helper.rs  main.rs
docs/: Container.md  Keyword.md  Operator.md
docs/compiler/lexer/: Token.md
executables/arc/: Cargo.toml
external_modules/apa/: README.md
external_modules/apa/src/: lib.rs
external_modules/arc/: Cargo.toml
external_modules/arc/src/: main.rs
external_modules/arc/src/commands/: compile.rs
external_modules/arc/src/models/: command_args.rs  mod.rs
external_modules/cli/: Cargo.toml
external_modules/cli/src/: main.rs
libraries/apa/: Cargo.toml  README.md
libraries/apa/src/: lib.rs
libraries/compiler/: Cargo.toml
modules/carbon-logger/: Cargo.toml
modules/carbon-logger/src/: lib.rs  test.rs
readme_assets/: carbon-lang.drawio
sketches/: function_call_commands 2021-12-11.txt  opcode_translation 2021-9-30.txt
src/: lib.rs  main.rs
src/compiler/: mod.rs
src/lexer/: mod.rs  preprocess.rs  tokenize.rs
src/lexer/hard_code/: lex_rule.rs  match_enums.rs  mod.rs
src/package_generator/: linear_action_tree_adapter.rs  mod.rs  utils.rs
src/parser/: decorator.rs  mod.rs  pipeline.rs  utils.rs
src/shared/: command_map.rs  mod.rs  token.rs
src/shared/ast/: action.rs  (+5 more)
src/tests/: mod.rs
(+309 files in other folders)
