[package]
name = "carbon-lang_compiler"
version = "0.0.1-alpha"
authors = ["Jeb Feng <ranzeplay@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
apa = { path = "external_modules/apa" }

[dev-dependencies]
itertools = "0.10.3"
