[package]
name = "carbon-lang_compiler"
description = "The compiler of The Carbon Programming Language"
version = "0.0.1-alpha"
repository = "https://github.com/StaplerIO/carbon-lang_compiler"
readme = "README.md"
license = "Apache-2.0"
authors = ["Jeb Feng <ranzeplay@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.5.5"
apa = { path = "external_modules/apa" }

[dev-dependencies]
itertools = "0.10.3"
