[package]
name = "arc"
description = "The compiler CLI of The Carbon Programming Language"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
structopt = "0.3.26"
console = "0.15.0"

carbon-lang_compiler = { path = "../../" }